awsApplicationLoadBalancerTerraform/infra/terraform/modules/security_group/main.tf
resource "aws_security_group" "web_server_sg_tf" {
  name        = "webserver-security-group"
  description = "Ingress Http and SSH and Egress to anywhere "

  vpc_id = var.vpc_id

  # All traffic from the internet is allowed to reach the instances
  ingress {
    from_port   = 0
    to_port     = 65535
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 65535
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "webserver-security-group"
  }
}
